--- a/Phase4/RestaurantContact.html
+++ b/Phase4/RestaurantContact.html
@@ -45,7 +45,7 @@
             </div>
           </div>
           <div class="footer">
-            COPYRIGHT © 2022 ALL RIGHTS RESERVED BY Savithasini™
+            COPYRIGHT © 2022 ALL RIGHTS RESERVED BY Subalakshmi™
           </div>
        
     </body>
